# SB_FinantialAdvisor

./: .gitignore  FinancePlan.py  ai_advisor.py  main.py  pyproject.toml  requirements.txt
functions/: createworkflow.py  executefunc.py  visualization.py
pages/: ChatBOT.py
styles/: dark.css  light.css  style.css
